# OOSEC-Oselot

./: .gitignore  README.md  debugging.md  env.example  fixes.md  planning.md  pyproject.toml  tools.py
src/: agent.py  oselot_cli.py  prompt.py
